--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <audio id = 'kramersound'>
 	<source src="http://www.drodd.com/seinfeld-audio/pretzels.wav"></source></audio>
 
-<audio id = 'georgesound'> <source src="https://dl-web.dropbox.com/get/george.wav?_subject_uid=23678581&w=AAC-wccTQ4cMpBo7MqTAxwLOqbKt9SAeNlaykHWjiU5LgQ"></source></audio>
+<audio id = 'georgesound'> <source src="http://www.drodd.com/seinfeld-audio/pretzels.wav"></source></audio>
 
 <audio id = 'jerrysound'> <source src="https://dl-web.dropbox.com/get/jerry.wav?_subject_uid=23678581&w=AACFZVeKuwFAOUOomfOTnR6QeUjguHPP32spukj3alT6oA"></source></audio>
 
